2003-12-06  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/gcompris/bonus.c: now hide the bar.
	
2003-11-29  Bruno coudoin  <bruno.coudoin@free.fr>

	* Release 4.2
	* src/boards/python/redraw.py: added display of level and coordinate. fixed checkings

2003-11-26  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/boards/python/redraw.py: added more target
	* src/gcompris/config.c: (gcompris_config_start),
	(set_locale_flag), (get_locale_name): changed locale init to support the default locale as is
	* src/gcompris/gcompris.c: (gcompris_get_locale),
	(gcompris_get_user_default_locale), (gcompris_set_locale),
	(gcompris_init): changed locale init to support the default locale 
	* src/gcompris/gcompris.h: added gcompris_get_user_default_locale
	* src/gcompris/properties.c: (gcompris_properties_new): changed locale init to support the default locale

2003-11-23  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/redraw.xml.in: added redraw.png. set level to 3
	* boards/boardicons/redraw.png: created
	* src/boards/python/redraw.py: completed, usable board. Need more content yet.	

2003-11-21  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/draw/color-selector.jpg: changed color
	* boards/draw/tool-selector.jpg: changed color
	* boards/geography/board1_0.xml.in: moved map on the right
	* boards/geography/board2_0.xml.in: moved map on the right
	* boards/geography/europe/italy.png: changed color
	* boards/geography/europe/russia.png: changed color
	* boards/skins/default/gcompris-shapebg.jpg: changed color
	* src/boards/draw.c: (display_color_selector): looking improvements
	* src/boards/python/redraw.py: completed the board. Now playable

2003-11-14  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/boards/python/redraw.py: nearly completed the implementation but not yet playable
	* src/boards/python/watercycle.py: added file header
	
2003-11-08  Bruno coudoin  <bruno.coudoin@free.fr>
