@@ -1,6 +1,7 @@
 2003-12-06  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	* src/gcompris/bonus.c: now hide the bar.
+	* src/boards/shapegame.c: implemented pause. fixed set locale bug.
 	
 2003-11-29  Bruno coudoin  <bruno.coudoin@free.fr>
 
